Fix text-align for welcome_base_without_alpha.html

--- a/speedy/core/static/speedy-core/css/welcome-base.css
+++ b/speedy/core/static/speedy-core/css/welcome-base.css
@@ -97,6 +97,7 @@ img.main-image {
 
     td {
         flex: 1;
+        text-align: center;
     }
 }
 
